--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,8 +5,8 @@ on:
       - main
 jobs:
   build-deploy:
-#    runs-on: ubuntu-20.04
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
+#    runs-on: macos-latest
     steps:
       - name: Check out source
         uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
 #          hugo-version: "latest" # 可以修改为你使用的 Hugo 版本
-          hugo-version: "0.119.0" #
+          hugo-version: "v0.119.0" #
           extended: true # 设置是否需要 extended 版本
 
       - name: Build
