--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           hugo-version: "latest" # 可以修改为你使用的 Hugo 版本
 #          hugo-version: "v0.119.0" #
-#          extended: true # 设置是否需要 extended 版本
+          extended: true # 设置是否需要 extended 版本
 
       - name: Build
         run: hugo
