--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: ''
+baseURL: '/'
 title: ysyy's blog
 theme: PaperMod
 languageCode: zh
@@ -184,7 +184,7 @@ params:
     region:  # 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数，请看twikoo官方文档
 
 taxonomies:
-  category: categories
+  # category: categories
   tag: tags
   series: series
 
